syntax = "proto3";
package Cratis.Chronicle.Contracts.Recommendations;
import "google/protobuf/empty.proto";
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message GetRecommendationsRequest {
   string EventStore = 1;
   string Namespace = 2;
}
message IEnumerable_Recommendation {
   repeated Recommendation items = 1;
}
message Perform {
   string EventStore = 1;
   string Namespace = 2;
   .bcl.Guid RecommendationId = 3; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
message Recommendation {
   .bcl.Guid Id = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string Name = 2;
   string Description = 3;
   string Type = 4;
   SerializableDateTimeOffset Occurred = 5;
}
message SerializableDateTimeOffset {
   int64 Ticks = 1;
   double OffsetMinutes = 2;
}
service Recommendations {
   rpc GetRecommendations (GetRecommendationsRequest) returns (IEnumerable_Recommendation);
   rpc Ignore (Perform) returns (.google.protobuf.Empty);
   rpc ObserveRecommendations (GetRecommendationsRequest) returns (stream IEnumerable_Recommendation);
   rpc Perform (Perform) returns (.google.protobuf.Empty);
}
